--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light py-3 fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-light py-3 fixed-top" id="navM">
     <div class="container-fluid">
       <img src="/images/logo1.png" alt=""><h2 class="ml-2">IM</h2>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -41,6 +41,7 @@
       </div>
     </div>
   </nav>
+  <section class="banner"></section>
 
   <script src="/js/scroll.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
