--- a/index.html
+++ b/index.html
@@ -41,7 +41,13 @@
       </div>
     </div>
   </nav>
-  <section class="banner"></section>
+
+  <section class="presentation container-fluid">
+    <div class="row">
+      <div class="col-6 photo"><h1>Test</h1></div>
+      <div class="col-6"></div>
+    </div>
+  </section>
 
   <script src="/js/scroll.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
