--- a/index.html
+++ b/index.html
@@ -44,12 +44,22 @@
 
   <section class="presentation container-fluid">
     <div class="row">
-      <div class="col-6 photo"><h1>Test</h1></div>
-      <div class="col-6"></div>
+      <div class="col-lg-6 photo">
+        <div>Bonjour, <br>je suis :</div>
+        <div id="about"></div>
+      </div>
+      <div class="col-lg-6 moi">
+        <h1>Ivan Makarenko</h1>
+        <h3 class="mb-5 mt-2">Apprenti Developpeur web</h3>
+        <div>En <strong>formation à distance</strong> depuis septembre 2021, Je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
+        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div>
+      </div>
     </div>
   </section>
 
+  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> <!-- Js Typewritter -->
   <script src="/js/scroll.js"></script>
+  <script src="/js/typewritter.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 </body>
