Titre avec fond d'ecriture et opacité réduite

--- a/index.html
+++ b/index.html
@@ -44,16 +44,23 @@
 
   <section class="presentation container-fluid">
     <div class="row">
-      <div class="col-lg-6 photo">
+      <div class="col-xl-6 photo">
         <div>Bonjour, <br>je suis :</div>
         <div id="about"></div>
       </div>
-      <div class="col-lg-6 moi">
-        <h1>Ivan Makarenko</h1>
+      <div class="col-xl-6 moi">
+        <div>Présentation</div>
+        <h1 class="mt-5">Ivan Makarenko</h1>
         <h3 class="mb-5 mt-2">Apprenti Developpeur web</h3>
         <div>En <strong>formation à distance</strong> depuis septembre 2021, Je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
         Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div>
       </div>
+    </div>
+  </section>
+
+  <section class="realisation container-fluid">
+    <div class="row titre">Mes réalisations
+      <h2 class="fond">Personnels</h2>
     </div>
   </section>
 
