Realisation image avec texte au survol responsive

--- a/index.html
+++ b/index.html
@@ -62,6 +62,49 @@
     <div class="row titre">Mes réalisations
       <h2 class="fond">Personnels</h2>
     </div>
+    <div class="row">
+      <div class="col-xl-4 projet mb-5"><div>En <strong>formation à distance</strong> depuis septembre 2021, Je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
+        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div></div>
+      <!-- <div class="verticale-bar"></div> -->
+      <div class="col-xl-8 travaux">
+        <div class="row justify-content-around">
+          <div class="image mb-5">
+            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <div class="real-overlay">
+              <div class="real-titre">HTML + CSS</div>
+              <p class="real-description">Restaurant vitrine</p>
+              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-html5 ml-1"></i></button></a>
+            </div>
+          </div>
+          <div class="image mb-5">
+            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <div class="real-overlay">
+              <div class="real-titre">HTML + CSS + JS</div>
+              <p class="real-description">Site e-commerce</p>
+              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-js-square ml-1"></i></button></a>
+            </div>
+          </div>
+        </div> 
+        <div class="row justify-content-around">
+          <div class="image mb-5">
+            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <div class="real-overlay">
+              <div class="real-titre">Wordpress</div>
+              <p class="real-description">Agence de voyage</p>
+              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-wordpress ml-1"></i></button></a>
+            </div>
+          </div>
+          <div class="image mb-5">
+            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <div class="real-overlay">
+              <div class="real-titre">React JS</div>
+              <p class="real-description">Info Journal</p>
+              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-react ml-1"></i></button></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> <!-- Js Typewritter -->
