Photo transparante avec text centrer Competences

--- a/index.html
+++ b/index.html
@@ -107,6 +107,12 @@
     </div>
   </section>
 
+  <section class="competences container-fluid">
+    <div class="row titre">Mes Competences
+      <h2 class="fond">Apprentissage</h2>
+    </div>
+  </section>
+
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> <!-- Js Typewritter -->
   <script src="/js/scroll.js"></script>
   <script src="/js/typewritter.js"></script>
