Competences progress bar cercle

--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
     </div>
     <div class="row">
       <div class="col-xl-4 projet mb-5"><div>En <strong>formation à distance</strong> depuis septembre 2021, Je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
-        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div></div>
+        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div>
+      </div>
       <!-- <div class="verticale-bar"></div> -->
       <div class="col-xl-8 travaux">
         <div class="row justify-content-around">
@@ -108,8 +109,86 @@
   </section>
 
   <section class="competences container-fluid">
-    <div class="row titre">Mes Competences
+    <div class="row titre">Mes Compétences
       <h2 class="fond">Apprentissage</h2>
+    </div>
+    <div class="row">
+      <div class="col-xl-4 photo2"></div>
+      <div class="col-xl-8 skills">
+        <div class="cercle justify-content-center text-center"><h2 class="py-5 text-white">Compétences</h2>
+          <div class="row pb-5">
+              <div class="col-6 col-md-4 pb-1">
+                  <div class="progresse blue">
+                      <span class="progress-left">
+                          <span class="progress-bar"></span>
+                      </span>
+                      <span class="progress-right">
+                          <span class="progress-bar"></span>
+                      </span>
+                      <div class="progress-value">75%</div>
+                  </div>
+                  <div class="mt-1 text-white">HTML / CSS</div>
+              </div>
+              <div class="col-4 pb-1 image-comp">
+                <img src="./images/time.jpg" alt="" class="time">
+              </div>
+              <div class="col-6 col-md-4 pb-1">
+                  <div class="progresse yellow">
+                      <span class="progress-left">
+                          <span class="progress-bar"></span>
+                      </span>
+                      <span class="progress-right">
+                          <span class="progress-bar exception"></span>
+                      </span>
+                      <div class="progress-value">40%</div>
+                  </div>
+                  <div class="mt-1 text-white">Javascript</div>
+              </div>
+          </div>
+          
+          <div class="row pb-5">
+            <div class="col-6 pb-1">
+                <div class="progresse pink">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <div class="progress-value">60%</div>
+                </div>
+                <div class="mt-1 text-white">Adobe.xd</div>
+            </div>
+            <div class="col-6 pb-1">
+                <div class="progresse pink">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <div class="progress-value">60%</div>
+                </div>
+                <div class="mt-1 text-white">Wordpress</div>
+            </div>
+          </div>
+
+          <div class="row pb-5">
+            <div class="col-12 pb-1">
+                <div class="progresse green">
+                    <span class="progress-left">
+                        <span class="progress-bar"></span>
+                    </span>
+                    <span class="progress-right">
+                        <span class="progress-bar exception"></span>
+                    </span>
+                    <div class="progress-value">40%</div>
+                </div>
+                <div class="mt-1 text-white">React JS</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </section>
 
