--- a/index.html
+++ b/index.html
@@ -192,6 +192,33 @@
     </div>
   </section>
 
+  <footer class="container-fluid fin">
+    <div class="row titre">Contact
+      <h2 class="fond">Appel</h2>
+    </div>
+    <div class="row">
+      <div class="col-xl-4 text-center mb-5">
+        <h3 class="mb-3">Coordonnées</h3>
+        <div class="mb-1"><i class="fa-solid fa-circle-arrow-right"> Tel : </i> 06 58 91 97 67</div>
+        <div class="mb-1"><i class="fa-solid fa-circle-arrow-right"> E-mail : </i> ivan.makarenko@free.fr</div>
+        <div class="mb-5"><i class="fa-solid fa-circle-arrow-right"> Mobile :  </i> Saint-Brieuc à Rennes</div>
+      </div>
+      <div class="col-xl-4 text-center mb-5">
+        <h3 class="mb-5">Connaitre mes expériences</h3>
+        <a href="#" download><button id="telecharger" class="mb-5">Telechargez mon CV <i class="fa-solid fa-download" id="download"></i></button></a>
+      </div>
+      <div class="col-xl-4 text-center mb-5">
+        <h3 class="mb-5">Liens utiles</h3>
+        <a href="#"><i class="fa-brands fa-github mr-3"></i></a>
+        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+      </div>
+    </div>
+
+    <div class="row copyright">
+      Copyright MAKARENKO Ivan - Tous droits non reservés
+    </div>
+  </footer>
+
   <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script> <!-- Js Typewritter -->
   <script src="/js/scroll.js"></script>
   <script src="/js/typewritter.js"></script>
