CV mis en forme

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <div class="real-overlay">
               <div class="real-titre">Wordpress</div>
               <p class="real-description">Agence de voyage</p>
-              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-wordpress ml-1"></i></button></a>
+              <a href="https://voyage-escale.go.yj.fr" target="_blank nooponer"><button class="btn">Visiter le site <i class="fa-brands fa-wordpress ml-1"></i></button></a>
             </div>
           </div>
           <div class="image mb-5">
@@ -205,7 +205,7 @@
       </div>
       <div class="col-xl-4 text-center mb-5">
         <h3 class="mb-5">Connaitre mes expériences</h3>
-        <a href="#" download><button id="telecharger" class="mb-5">Telechargez mon CV <i class="fa-solid fa-download" id="download"></i></button></a>
+        <a href="./CV.html" download><button id="telecharger" class="mb-5">Telechargez mon CV <i class="fa-solid fa-download" id="download"></i></button></a>
       </div>
       <div class="col-xl-4 text-center mb-5">
         <h3 class="mb-5">Liens utiles</h3>
@@ -215,7 +215,7 @@
     </div>
 
     <div class="row copyright">
-      Copyright MAKARENKO Ivan - Tous droits non reservés
+      @Copyright MAKARENKO Ivan - Tous droits non reservés
     </div>
   </footer>
 
