Nouveau scroll page + ancre dans page

--- a/CV.html
+++ b/CV.html
@@ -363,10 +363,10 @@ body{
                 <section class="about sect">
                     <h2 class="right-title">À Propos de moi</h2>
                     <p class="para">
-                      Titulaire du BAC Général S option SVT, j'ai en vue de préparer un stage en entreprise dans le developpement web. Mon expérience professionnelle, détaillée au sein de mon CV dont vous pourrez prendre connaissance en  pièce-jointe, ont confirmé mon goût pour le travail en équipe et en solo. Cette expérience m'a permis aussi de développer un sens de l'autonomie et d'anticipation sur les missions qui m'ont été confiées. <br>
+                      Titulaire du BAC Général S option SVT, j'ai en vue de préparer un stage en entreprise dans le developpement web. Mon expérience professionnelle, détaillée au sein de mon CV dont vous pourrez prendre connaissance en  pièce-jointe, a confirmé mon goût pour le travail en équipe et en solo. Cette expérience m'a permis aussi de développer un sens de l'autonomie et d'anticipation sur les missions qui m'ont été confiées. <br>
                         <br>
                         Motivé  par le fait de savoir programmer des applications / logiciels, apprendre sur le développement du web et de rejoindre une entreprise enrichissante, mon sens de l'organisation, de la rigueur et mon adaptabilité sont des qualités que je saurai mettre à votre service. 
-                        Je souhaite fortement travailler avec vous, du fait que je pourrai vous être utile et que vous pourrez m'apporter des connaissances et des compétences. 
+                        Je souhaite fortement travailler au près de vous, cela serait un avantage autant pour vous que pour moi. 
                     </p>
                 </section>
 
