--- a/index.html
+++ b/index.html
@@ -29,23 +29,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto"> 
           <li class="nav-item">
-            <a class="nav-link" href="#">Présentation</a>
+            <a class="nav-link" href="#presentations">Présentation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Réalisation</a>
+            <a class="nav-link" href="#realisations">Réalisation</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Compétences</a>
+            <a class="nav-link" href="#competences">Compétences</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" href="#contacts">Contact</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
 
-  <section class="presentation container-fluid">
+  <!-- Presentation -->
+
+  <section class="presentation container-fluid" id="presentations">
     <div class="row">
       <div class="col-xl-6 photo">
         <div>Bonjour, <br>je suis :</div>
@@ -54,58 +56,60 @@
       <div class="col-xl-6 moi">
         <div>Présentation</div>
         <h1 class="mt-5">Ivan Makarenko</h1>
-        <h3 class="mb-5 mt-2">Apprenti Developpeur web</h3>
-        <div>En <strong>formation à distance</strong> depuis septembre 2021, Je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
+        <h3 class="mb-5 mt-2">En formation développeur web</h3>
+        <div>En <strong>formation à distance</strong> depuis septembre 2021, je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
         Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div>
       </div>
     </div>
   </section>
 
-  <section class="realisation container-fluid">
+  <!-- Réalisation -->
+  
+  <section class="realisation container-fluid" id="realisations">
     <div class="row titre">Mes réalisations
-      <h2 class="fond">Personnels</h2>
+      <h2 class="fond">Personnelles</h2>
     </div>
     <div class="row">
       <div class="col-xl-4 projet">
         <h2 class="mb-5 bar-horizontale">Une Passion</h2>
-        <p>Passionné par le developpement web depuis septembre 2021, voici quelque-uns de mes <strong>projets personnels</strong> que j'ai réalisé, uniquement dans le but de m'améliorer.</p>
+        <p>Passionné par le developpement web depuis septembre 2021, voici quelque-uns de mes <strong>projets personnels</strong> que j'ai réalisé.</p>
         <p>Curieux et rigoureux, je cherche sans cesse a approfondir mes connaissances afin d'obtenir un travail toujours de meilleur qualité. </p>
       </div>
       <!-- <div class="verticale-bar"></div> -->
-      <div class="col-xl-8 travaux">
+      <div class="col-xl-8 travaux pt-5">
         <div class="row justify-content-around">
-          <div class="image mt-5 my-xl-5">
-            <img src="./images/photo.jpg" class="image-jointe" alt="">
+          <div class="image mb-5">
+            <img src="./images/restaurant.png" class="image-jointe" alt="">
             <div class="real-overlay">
               <div class="real-titre">HTML + CSS</div>
               <p class="real-description">Restaurant vitrine</p>
-              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-html5 ml-1"></i></button></a>
+              <a href="https://restaurant-vitrine.netlify.app/" target="_blank" rel="noopener"><button class="btn">Visiter le site <i class="fa-brands fa-html5 ml-1"></i></button></a>
             </div>
           </div>
-          <div class="image my-5">
-            <img src="./images/photo.jpg" class="image-jointe" alt="">
+          <div class="image mb-5">
+            <img src="./images/commerce.png" class="image-jointe" alt="">
             <div class="real-overlay">
               <div class="real-titre">HTML + CSS + JS</div>
               <p class="real-description">Site e-commerce</p>
-              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-js-square ml-1"></i></button></a>
+              <a href="https://vet-eco.netlify.app/" target="_blank" rel="noopener"><button class="btn">Visiter le site <i class="fa-brands fa-js-square ml-1"></i></button></a>
             </div>
           </div>
         </div> 
         <div class="row justify-content-around">
           <div class="image mb-5">
-            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <img src="./images/voyage.png" class="image-jointe" alt="">
             <div class="real-overlay">
               <div class="real-titre">Wordpress</div>
               <p class="real-description">Agence de voyage</p>
-              <a href="https://voyage-escale.go.yj.fr" target="_blank nooponer"><button class="btn">Visiter le site <i class="fa-brands fa-wordpress ml-1"></i></button></a>
+              <a href="https://voyage-escale.go.yj.fr" target="_blank" rel="noopener"><button class="btn">Visiter le site <i class="fa-brands fa-wordpress ml-1"></i></button></a>
             </div>
           </div>
           <div class="image mb-5">
-            <img src="./images/photo.jpg" class="image-jointe" alt="">
+            <img src="./images/info.png" class="image-jointe" alt="">
             <div class="real-overlay">
               <div class="real-titre">React JS</div>
               <p class="real-description">Info Journal</p>
-              <a href="#"><button class="btn">Visiter le site <i class="fa-brands fa-react ml-1"></i></button></a>
+              <a href="https://info-react.netlify.app/" target="_blank" rel="noopener"><button class="btn">Visiter le site <i class="fa-brands fa-react ml-1"></i></button></a>
             </div>
           </div>
         </div>
@@ -113,7 +117,9 @@
     </div>
   </section>
 
-  <section class="competences container-fluid">
+  <!-- Compétences -->
+
+  <section class="competences container-fluid" id="competences">
     <div class="row titre">Mes Compétences
       <h2 class="fond">Apprentissage</h2>
     </div>
@@ -197,7 +203,9 @@
     </div>
   </section>
 
-  <footer class="container-fluid fin">
+  <!-- Footer -->
+
+  <footer class="container-fluid fin" id="contacts">
     <div class="row titre">Contact
       <h2 class="fond">Appel</h2>
     </div>
@@ -214,13 +222,13 @@
       </div>
       <div class="col-xl-4 text-center mb-5">
         <h3 class="mb-5">Liens utiles</h3>
-        <a href="#"><i class="fa-brands fa-github mr-3"></i></a>
+        <a href="https://github.com/IvanMakarenko91" target="_blank" rel="noopener"><i class="fa-brands fa-github mr-3"></i></a>
         <a href="#"><i class="fa-brands fa-linkedin"></i></a>
       </div>
     </div>
 
     <div class="row copyright p-3">
-      @Copyright MAKARENKO Ivan - Tous droits non reservés
+      @Copyright MAKARENKO Ivan - Tous droits non réservés
     </div>
   </footer>
 
