--- a/CV.html
+++ b/CV.html
@@ -55,13 +55,11 @@ body{
 
 .image{
     width: 100%;
-    text-align: center;
-}
-.profile img{
-    width: 100%;
-    border-radius: 50%;
+    height: 300px;
     border: 8px solid white;
-    
+    text-align: center;
+    background-size: cover;
+    background-image: url('./images/profil2.jpg');
 }
 
 .name{
@@ -292,9 +290,7 @@ body{
         <section class="left-section">
             <div class="left-content">
                 <div class="profile">
-                    <div class="image">
-                        <img src="./images/photo.jpg" alt="">
-                    </div>
+                    <div class="image"></div>
                     <h2 class="name">Ivan Makarenko</h2>
                     <p class="career">Developpeur web en formation</p>
                 </div>
@@ -313,6 +309,10 @@ body{
                             <i class="fa fa-map-marker"></i>
                             19 rue des 3 frères Poutrin, 22 000 St-Brieuc
                         </li>
+                        <li>
+                          <i class="fa-solid fa-address-card"></i>
+                          portfolio-IM.netlify.app
+                      </li>
                     </ul>
                 </div>
                 <div class="skills-section">
