--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   <section class="presentation container-fluid" id="presentations">
     <div class="row">
       <div class="col-xl-6 photo">
-        <div>Bonjour, <br>je suis :</div>
+        <div>Bonjour, <br>je suis </div>
         <div id="about"></div>
       </div>
       <div class="col-xl-6 moi">
@@ -58,7 +58,7 @@
         <h1 class="mt-5">Ivan Makarenko</h1>
         <h3 class="mb-5 mt-2">En formation développeur web</h3>
         <div>En <strong>formation à distance</strong> depuis septembre 2021, je vous propose ma candidature. De mes expériences professionnelles précédentes, j'ai acquis de l'autonomie et un bon sens de l'organisation du travail que j'aimerai mettre à votre disposition. 
-        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt a affronter toutes les difficultées.</strong></div>
+        Bien que je sois débutant, je suis quelqu'un de motivé et <strong>prêt à affronter toutes les difficultés.</strong></div>
       </div>
     </div>
   </section>
@@ -73,7 +73,7 @@
       <div class="col-xl-4 projet">
         <h2 class="mb-5 bar-horizontale">Une Passion</h2>
         <p>Passionné par le developpement web depuis septembre 2021, voici quelque-uns de mes <strong>projets personnels</strong> que j'ai réalisé.</p>
-        <p>Curieux et rigoureux, je cherche sans cesse a approfondir mes connaissances afin d'obtenir un travail toujours de meilleur qualité. </p>
+        <p>Curieux et rigoureux, je cherche sans cesse à approfondir mes connaissances afin d'obtenir un travail toujours de meilleur qualité. </p>
       </div>
       <!-- <div class="verticale-bar"></div> -->
       <div class="col-xl-8 travaux pt-5">
@@ -223,7 +223,7 @@
       <div class="col-xl-4 text-center mb-5">
         <h3 class="mb-5">Liens utiles</h3>
         <a href="https://github.com/IvanMakarenko91" target="_blank" rel="noopener"><i class="fa-brands fa-github mr-3"></i></a>
-        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/ivan-makarenko/" target="_blank" rel="noopener"><i class="fa-brands fa-linkedin"></i></a>
       </div>
     </div>
 
