Corrections ortographes CV

--- a/CV.html
+++ b/CV.html
@@ -379,7 +379,7 @@ body{
                         </div>
                         <div class="right-tl-content">
                             <div class="tl-content">
-                                <h5 class="tl-title-2">Apprentie alternant</h5>
+                                <h5 class="tl-title-2">Apprenti alternant</h5>
                                 <p class="para">
                                   Centre de Formation et de promotion professionnelle agricole, Sciences et Technologies des aliments - CFPPA, Pontivy (56)
                                 </p>
@@ -449,13 +449,13 @@ body{
                     <div class="timeline">
                       <div class="left-tl-content">
                           <h5 class="tl-title">Developpeur web</h5>
-                          <p class="para">2022 - présent</p>
+                          <p class="para">2021 - présent</p>
                       </div>
                       <div class="right-tl-content">
                           <div class="tl-content">
                               <h5 class="tl-title-2">Étudiant Studi</h5>
                               <p class="para">
-                                <div class="fonce">Formation à distance (studi), Développeur web Full-Stack</div>
+                                <div class="fonce">Formation à distance (studi), Développeur web full-stack</div>
                               </p>
                           </div>
                       </div>
